[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/levels/Main.gd" type="Script" id=2]
[ext_resource path="res://ExportedTextures/by-group/meditation-back.png" type="Texture" id=3]
[ext_resource path="res://ExportedTextures/by-group/meditation-fore.png" type="Texture" id=4]
[ext_resource path="res://scenes/characters/GyatsoMeditate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/misc/CutscenePlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/characters/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/misc/CutsceneCamera.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "EndCutscene"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../YSort/Player/Camera2D:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.92817 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("../CutsceneCamera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CutsceneCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 460, 135 ), Vector2( 240, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../YSort/Player/Camera2D:current")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("CutscenePlayer/Dialog_box")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "kill_dialog"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../CutsceneCamera")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 5.0 ],
"method": "_move_to_playercam"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("CutscenePlayer/LocationLine")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Southern Air Temple", "Lookout Shrine" ],
"method": "_show_location_text"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CutscenePlayer/ColorAboveUI:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CutscenePlayer/ColorBelowUI:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "WereFadingToWhite"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath("CutscenePlayer/Dialog_box")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Fading to white now..." ],
"method": "show_unskippable_dialog"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CutscenePlayer/ColorAboveUI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CutscenePlayer/ColorAboveUI:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CutscenePlayer/ColorBelowUI:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="UILayer" type="CanvasLayer" parent="."]
pause_mode = 2
follow_viewport_scale = 2.0

[node name="CutscenePlayer" parent="UILayer" instance=ExtResource( 6 )]
anims/EndCutscene = SubResource( 1 )
anims/PanToCharacters = SubResource( 3 )
anims/WereFadingToWhite = SubResource( 2 )

[node name="Dialog_box" parent="UILayer/CutscenePlayer" index="1"]
margin_right = -5.0

[node name="ColorAboveUI" parent="UILayer/CutscenePlayer" index="3"]
visible = false
color = Color( 1, 1, 1, 1 )

[node name="MeditationRoom" type="TextureRect" parent="."]
margin_right = 700.0
margin_bottom = 270.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 1170, 580 )

[node name="GyatsoMeditate" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 915, 550 )

[node name="Foreground" type="TextureRect" parent="."]
visible = false
margin_right = 700.0
margin_bottom = 270.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2( 460, 135 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 1790, 300 )
scale = Vector2( 4.91019, 4.91019 )
polygon = PoolVector2Array( 228, 14, 229, 33, 208, 40, 153, 38, 109, 37, 55, 20, -7, 17, -76, 20, -126, 33, -174, 51, -224, 58, -312, 56, -347, 33, -347, 17, -317, 17, -251, 11, -194, 12, -166, 17, -121, 9, -63, -9, -13, -14, 25, -13, 110, -2, 184, 5, 195, -64, -377, -66, -363, 117, 233, 92, 236, -70 )

[node name="CutsceneCamera" parent="." instance=ExtResource( 8 )]

[editable path="UILayer/CutscenePlayer"]
